--- a/content/themes/casper/assets/css/screen.css
+++ b/content/themes/casper/assets/css/screen.css
@@ -950,7 +950,7 @@ body:not(.post-template) .post-title {
     width: 140px;
 }
 
-.post-footer .share a {
+/*.post-footer .share a {
     font-size: 1.8rem;
     display: inline-block;
     margin: 1rem 1.6rem 1.6rem 0;
@@ -960,7 +960,7 @@ body:not(.post-template) .post-title {
 
 .post-footer .share a:hover {
     color: #50585D;
-}
+}*/
 
 /* The subscribe icon on the footer */
 .subscribe {
