--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -25,6 +25,8 @@
             {{content}}
         </section>
 
+        <div class="shareaholic-canvas" data-app="share_buttons" data-app-id="7800439"></div>
+
         <div class="shareaholic-canvas" data-app="recommendations" data-app-id="7850413"></div>
 
         <footer class="post-footer">
