Added Shareaholic Related Content

--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -28,6 +28,8 @@
             {{content}}
         </section>
 
+        <div class="post-related shareaholic-canvas" data-app="recommendations" data-app-id="12785580"></div>
+
         <footer class="post-footer">
 
         {{! Everything inside the #author tags pulls data from the author }}
